...
export interface ListConfigSectionProps {
  config: SharedConfig
  callbacks: SharedConfigCallbacks
}

const IMPLEMENTATION_OPTIONS: SelectionOption<Implementation>[] = [
  { label: 'Swipeable', value: 'swipeable', testID: 'select-swipeable' },
  { label: 'RNGH', value: 'rngh', testID: 'select-rngh' }
]

const REVERSED_OPTIONS: SelectionOption<boolean>[] = [
  { label: 'ON', value: true, testID: 'toggle-leading-on' },
  { label: 'OFF', value: false, testID: 'toggle-leading-off' }
]
...
